Post upgrade checking (#275)
* fixes according to new version

* fixes link to java

* fixes link to java

* fixed link to java

* small fixes