@@ -6,9 +6,9 @@ By the default, the timezone is inherited from the timezone of the operating sys
 
 ## Viewing the Time Zone
 
-The current timezone is displayed on the **Admin: System Information** page.
+The current timezone is displayed on the **Admin > System Information** page.
 
-![](images/timezone.png)
+![](../installation/images/server_time.png)
 
 ## Changing the Time Zone
 
@@ -20,9 +20,15 @@ The current timezone is displayed on the **Admin: System Information** page.
   echo " * [ATSD] ATSD `$java_command -version 2>&1 | head -n 1`"
   #GC logs disabled
   if grep -qi "arm" /proc/cpuinfo; then
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
+      JAVA_OPTS="$JAVA_OPTS -XX:+PrintCommandLineFlags $DParams"
+      "$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >/dev/null 2>${errorLog} &
+      #uncomment to enable atsd output logging
+      #"$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >>${outLog} 2>>${errorLog} &
   else
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
+      JAVA_OPTS="$JAVA_OPTS $DParams"
+      "$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >/dev/null 2>>${errorLog} &
+      #uncomment to enable atsd output logging
+      #"$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >>${outLog} 2>>${errorLog} &
   fi
   ```
 
@@ -30,12 +36,18 @@ The current timezone is displayed on the **Admin: System Information** page.
 
   ```
   echo " * [ATSD] ATSD `$java_command -version 2>&1 | head -n 1`"
-  #GC logs disabled
-  if grep -qi "arm" /proc/cpuinfo; then
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
-  else
-      "$java_command" -server -Duser.timezone=US/Pacific -Xmx4096M -XX:MaxPermSize=128m ...
-  fi
+    #GC logs disabled
+    if grep -qi "arm" /proc/cpuinfo; then
+        JAVA_OPTS="$JAVA_OPTS -XX:+PrintCommandLineFlags $DParams"
+        "$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >/dev/null 2>${errorLog} &
+        #uncomment to enable atsd output logging
+        #"$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >>${outLog} 2>>${errorLog} &
+    else
+        JAVA_OPTS="$JAVA_OPTS $DParams"
+        "$java_command" $JAVA_OPTS -Duser.timezone=US/Pacific -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >/dev/null 2>>${errorLog} &
+        #uncomment to enable atsd output logging
+        #"$java_command" $JAVA_OPTS -classpath "$atsd_home"/conf:"$atsd_executable""${lib_jars}" com.axibase.tsd.Server >>${outLog} 2>>${errorLog} &
+    fi
   ```
 
 * Restart ATSD.
@@ -45,4 +57,4 @@ The current timezone is displayed on the **Admin: System Information** page.
 /opt/atsd/atsd/bin/start-atsd.sh
 ```
 
-* Open the **Admin: System Information** page and verify that the new timezone setting is set.
+* Open the **Admin > System Information** page and verify that the new timezone setting is set.
